--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "split-type": "^0.3.4",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.3",
+    "split-type": "^0.3.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
