--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^7.9.3",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.4.1",
     "split-type": "^0.3.4",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
