--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
+    "sockjs-client": "^1.6.1",
     "split-type": "^0.3.4",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
