--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
-  "outputDirectory": ".next",
-  "regions": ["iad1"],
-  "builds": [
-    {
-      "src": "next.config.js",
-      "use": "@vercel/next"
-    }
-  ],
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_RUNTIME_CONFIG": "true",
-      "NEXT_FONT_GOOGLE_SKIP_VALIDATIONS": "true"
-    }
-  },
-  "env": {
-    "NEXT_PUBLIC_VERCEL_ENV": "production",
-    "NEXT_PUBLIC_RUNTIME_CONFIG": "true",
-    "NEXT_RUNTIME_NODE_ENV": "production",
-    "NEXT_FONT_GOOGLE_SKIP_VALIDATIONS": "true"
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
