--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-table": "^8.21.3",
     "animejs": "^4.2.2",
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
